# DiscordKit

./: .clang-format  .gitignore  CMakeLists.txt  Client_8hpp_source.html  Doxyfile  README.md  activity__flags_8hpp_source.html  activity__type_8hpp_source.html  annotated.html  annotated_dup.js  asset_8hpp_source.html  attachment_8hpp_source.html  channel_8hpp_source.html  channel__type_8hpp_source.html  classClient-members.html  classClient.html  classDuration-members.html  classDuration.html  classLimit-members.html  classLimit.html  classPermissions-members.html  classPermissions.html  classes.html  color_8hpp_source.html  dir_000001_000000.html  dir_000001_000002.html  dir_000001_000003.html  dir_000003_000000.html  dir_28dffa3035f4c7321d525b838af79f9e.html  dir_28dffa3035f4c7321d525b838af79f9e_dep.map  dir_28dffa3035f4c7321d525b838af79f9e_dep.md5  dir_297590b3aabe4e3103bdc9d227d18785.html  dir_297590b3aabe4e3103bdc9d227d18785.js  dir_297590b3aabe4e3103bdc9d227d18785_dep.dot  dir_3b82544024519ceaefbf0b385db19546.html  dir_3b82544024519ceaefbf0b385db19546.js  dir_3b82544024519ceaefbf0b385db19546_dep.dot  dir_599f78f89b8be4bec03f2e02fed8d7bd.html  dir_599f78f89b8be4bec03f2e02fed8d7bd.js  dir_599f78f89b8be4bec03f2e02fed8d7bd_dep.map  (+145 more)
.github/workflows/: ci.yml  doxygen.yml
d0/d10/: classDiscordKit_1_1Handlers_1_1DispatchEventHandler-members.html
d0/d16/: classDiscordKit_1_1Events_1_1Event.html  classDiscordKit_1_1Events_1_1Event.js
d0/d29/: classDiscordKit_1_1Commands_1_1SlashCommand.html  classDiscordKit_1_1Commands_1_1SlashCommand.js
d0/dd2/: classDiscordKit_1_1Commands_1_1BasicModels.html
d1/d0c/: classDiscordKit_1_1WSClient.html  classDiscordKit_1_1WSClient.js  classDiscordKit_1_1WSClient_aecec7fe8645d9a739badd0d13378ca04_cgraph.dot
d1/d38/: classDiscordKit_1_1Handlers_1_1GeneralHandler.html
d1/d78/: classDiscordKit_1_1Event-members.html
d1/d7f/: classErrorHandlers.html
d1/d9e/: namespaceDiscordKit_1_1Events_1_1Handlers.html  namespaceDiscordKit_1_1Events_1_1Handlers.js
d1/dc6/: ErrorHandlers_8hpp__incl.dot
d1/dd9/: classDiscordKit_1_1Events_1_1Handlers_1_1GeneralHandler-members.html
d2/d16/: classDiscordKit_1_1Events_1_1Handlers_1_1AppCommandHandler.html  classDiscordKit_1_1Events_1_1Handlers_1_1AppCommandHandler.js
d2/d2a/: classDiscordKit_1_1Handlers_1_1DispatchEventHandler.html
d2/dc4/: classDiscordKit_1_1Events_1_1Handlers_1_1DispatchEventHandler__inherit__graph.dot
d2/dd5/: Handler_8hpp__dep__incl.dot
d2/de1/: BasicModels_8hpp.html  BasicModels_8hpp.js  BasicModels_8hpp_source.html
d3/d11/: classDiscordKit_1_1Commands_1_1SlashCommand-members.html
d3/d33/: DiscordConnection_8hpp__dep__incl.dot
d3/d45/: namespaceDiscordKit_1_1Handlers.html
d3/dbd/: SlashCommand_8hpp__dep__incl.dot
d3/dc7/: namespaceDiscordKit.html  namespaceDiscordKit.js
d3/dd3/: classDiscordKit_1_1Events_1_1Handlers_1_1SlashCommandHandler__coll__graph.dot
d3/dd7/: classDiscordKit_1_1Commands_1_1BasicCommand.html  classDiscordKit_1_1Commands_1_1BasicCommand.js
d3/ddf/: classDiscordKit_1_1Handlers_1_1AppCommandHandler.html
d3/dfb/: classDiscordKit_1_1DiscordConnection__coll__graph.dot
d4/d84/: ErrorHandlers_8hpp__dep__incl.dot
d4/da2/: classDiscordKit_1_1Events_1_1Handlers_1_1ErrorHandler-members.html
d4/da8/: SlashCommand_8hpp__incl.dot
d5/d5a/: classDiscordKit_1_1DiscordConnection-members.html
d5/d6f/: Handler_8hpp__incl.dot
d5/d70/: namespaceDiscordKit_1_1Commands.html  namespaceDiscordKit_1_1Commands.js
d5/d7c/: Event_8hpp__dep__incl.dot
d5/ddf/: Intents_8hpp__incl.dot
d5/de2/: ErrorHandlers_8hpp.html  (+2 more)
docs/: Doxyfile  Optimizations.md  README.md  doxygen_crawl.html  index.html  pages.html  styling.css
examples/: CMakeLists.txt  basicExample.cpp  example_client.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+50 more)
tests/: CMakeLists.txt
(+149 files in other folders)
